<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="notification_category"
        app:title="@string/setting_notification_title">
        <SwitchPreferenceCompat
            app:key="release_notification"
            app:summary="@string/setting_release_value"
            app:title="@string/setting_release_title" />
        <SwitchPreferenceCompat
            app:key="daily_notification"
            app:summary="@string/setting_daily_value"
            app:title="@string/setting_daily_title" />
    </PreferenceCategory>
    <PreferenceCategory
        app:key="sort_category"
        app:title="@string/messages_header">
        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
