<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort_by"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/Action_sort"
        app:showAsAction="always">
        <!-- movies submenu -->
        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/action_popular_movies"
                    android:checked="true"
                    android:title="@string/sort_popular" />

                <item
                    android:id="@+id/action_top_rated"
                    android:title="@string/sort_rate" />

                <item
                    android:id="@+id/action_now_playing"
                    android:title="@string/sort_now_playing" />
            </group>
        </menu>
    </item>
    <item android:id="@+id/action_setting_language"
        android:title="@string/menu_setting_language"
        app:showAsAction="never"/>

</menu>