<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.CardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_overview"
            android:visibility="visible"
            />

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="12dp"
            app:layout_constraintEnd_toStartOf="@+id/bookmark_button"
            app:layout_constraintTop_toTopOf="@+id/bookmark_button"
            app:srcCompat="@drawable/ic_favorite_black_24dp" />

        <ImageButton
            android:id="@+id/bookmark_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="12dp"
            app:layout_constraintEnd_toStartOf="@+id/share_button"
            app:layout_constraintTop_toTopOf="@+id/share_button"
            app:srcCompat="@drawable/ic_bookmark_black_24dp" />

        <ImageButton
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="#00FFFFFF"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_poster"
            app:srcCompat="@drawable/ic_share_black_24dp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:text="@string/value_tv_judul"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/donute_progress"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/value_tv_releasedate"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/donute_progress"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_overview"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="6"
            android:text="@string/value_overview"
            app:layout_constraintBottom_toTopOf="@+id/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_release" />

        <TextView
            android:id="@+id/tv_more_info"
            style="@style/TextContent.Black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:maxLines="2"
            android:text="@string/value_more_info"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/card_poster" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_poster"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="16dp"
            app:layout_constraintDimensionRatio="w,2:3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_person"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cds_img_poster"
                android:scaleType="centerCrop"
                tools:background="@tools:sample/backgrounds/scenic" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="132dp"
            app:layout_constraintStart_toEndOf="parent" />

        <com.github.lzyzsd.circleprogress.DonutProgress
            android:id="@+id/donute_progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:donut_background_color="@android:color/black"
            app:donut_finished_color="@android:color/holo_green_light"
            app:donut_finished_stroke_width="5dp"
            app:donut_inner_bottom_text_size="12sp"
            app:donut_progress="79"
            app:donut_text_color="@android:color/background_light"
            app:donut_text_size="12sp"
            app:donut_unfinished_color="#1B5E20"
            app:donut_unfinished_stroke_width="5dp"
            app:layout_constraintStart_toEndOf="@+id/card_poster"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>